<resources>
    <string name="app_name">AgendamentoUBS</string>
    <string name="title_list">Agendamentos</string>
    <string name="title_profile">Perfil</string>
    <string name="name_test">Ana Luisa Burjack</string>
    <string name="job">CARGO</string>
    <string name="email">EMAIL</string>
    <string name="title_activity_login">Login</string>

    <!-- Strings related to login -->
    <string name="prompt_CPF">CPF</string>
    <string name="prompt_SENHA">Senha</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid">CPF ou senha inválido(s)</string>
    <string name="papel_de_parede">Papel de Parede</string>
    <string name="administrador">Administrador</string>
    <string name="perfil">Perfil</string>
    <string name="sair">SAIR</string>
</resources>
