<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="br.ufg.es.dsdm.analuisaburjack_nataliamarufuji.agendamentoubs.ProfileActivity"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/wallpaper"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/papel_de_parede"
            android:focusable="auto"
            android:scaleType="centerCrop"
            android:background="@color/colorPrimaryLight"/>

        <LinearLayout
            android:id="@+id/details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/wallpaper"
            android:elevation="10dp"
            android:fadingEdge="horizontal|vertical"
            android:orientation="vertical"
            android:paddingHorizontal="32dp"
            android:visibility="visible">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:elevation="50dp"
                android:fadingEdge="horizontal|vertical"
                android:fadingEdgeLength="4sp"
                android:fontFamily="lobster"
                android:text="@string/name_test"
                android:textColor="@color/onAccent"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginBottom="4dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity=""
                android:elevation="10dp"
                android:fadingEdge="horizontal|vertical"
                android:fadingEdgeLength="4sp"
                android:fontFamily="lobster"
                android:text="@string/administrador"
                android:textColor="@color/onAccent"
                android:textSize="16sp"
                android:layout_marginBottom="18dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/job_infos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/details"
            android:orientation="horizontal"
            android:paddingHorizontal="16dp"
            android:paddingVertical="18dp">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/ic_profile" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="lobster"
                    android:paddingLeft="16dp"
                    android:text="TEST"
                    android:textColor="#555"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="lobster"
                    android:paddingLeft="17dp"
                    android:text="@string/job"
                    android:textColor="#555"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/job_infos"
            android:orientation="horizontal"
            android:paddingHorizontal="16dp"
            android:paddingVertical="18dp">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/ic_email" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="lobster"
                    android:paddingHorizontal="16dp"
                    android:text="TEST"
                    android:textColor="#555"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="lobster"
                    android:paddingHorizontal="17dp"
                    android:text="@string/email"
                    android:textColor="#555"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/sair"
            style="@android:style/Widget.DeviceDefault.Button.Borderless"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/email"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="31dp"
            android:background="@color/colorPrimaryDark"
            android:elevation="20dp"
            android:text="SAIR"
            android:textColor="@color/onPrimary"
            android:textSize="18sp" />
    </RelativeLayout>


    <FrameLayout
        android:id="@+id/contentRoot"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    </FrameLayout>
    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/windowBackground"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/navigation">

        <selector xmlns:android="http://schemas.android.com/apk/res/android">
            <item android:state_pressed="true"
                android:color="@color/pressed"></item>
            <item android:state_enabled="false"
                android:color="@color/disabled"></item>
            <item android:color="@color/norm"></item>
        </selector>
    </android.support.design.widget.BottomNavigationView>

</android.support.constraint.ConstraintLayout>
